# CMake_Test

Test_1/: CMakeLists.txt
Test_2/: CMakeLists.txt  main.cpp
Test_2/hello/: hello.h
Test_3/: CMakeLists.txt
Test_3/hello/: CMakeLists.txt  hello.cpp
Test_4/: CMakeLists.txt  main.cpp
Test_4/CMake_Utility/: CMakeLists.txt
Test_4/lib_1/: hello.cpp
